osd/PrimaryLogPG: do not call on_shutdown() if (pg.deleting)

when a callback is called, it could be facing a PG already shut down by
OSD. but if that callback wants to shut that PG down. it should check
the PG's status first.

Fixes: http://tracker.ceph.com/issues/19902
Signed-off-by: Kefu Chai <kchai@redhat.com>
(cherry picked from commit f3c44a0dfc859f6f625a92e727e0e521ed4a9207)